[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"

[[bin]]
name = "01"
test = false
bench = false

[[bin]]
name = "02"
test = false
bench = false

[[bin]]
name = "03"
test = false
bench = false
